# tmpl-tauri-app

src/: .gitignore  Cargo.toml  Tauri.toml  tauri.conf.json
src/src/: error.rs  lib.rs  main.rs  prelude.rs
ui/assets/scripts/js/: main.js
ui/assets/styles/css/: main.css
ui/views/: main.html
