[package]
name = "tauri_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["SynapDrake <SynapDrake@yandex.ru>"]
license = ""
repository = ""
edition = "2021"
build = "src/build.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1" }

[dependencies]
tauri = { version = "2.0.3" }
tauri-plugin-log = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
