[package]
name = "tauri-app"
description = "A Tauri App"
version = "0.1.0"
authors = ["Bulat Sh. <t.me/fuderis>"]
edition = "2024"
build = "src/build.rs"

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = ["config-toml"] }

[dependencies]
macron = { version = "0.1.5", features = ["derive", "string"] }
tokio = { version = "1.45.1", features = ["full"] }
tauri = { version = "2.0.3", features = ["config-toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rand = "0.8.5"
